# ranges-syntax

./: CMakeLists.txt  README.md  main.cpp
